added all routes
